Thu Jul 27 13:57:31 UTC 2006  William R. Otte  <wotte@dre.vanderbilt.edu>

        * docs/svn/config
        
          Fixed syntax errors.  thanks to Adam Mitz for reporting them.

Thu Jul 27 10:14:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        Committing some small changes I had pending to see how svn behaves now
        with updates and status info on the build systems.

        * ace/Recursive_Thread_Mutex.{h,cpp}:
          Changed removed_ to a bool

        * ace/Thread_Mutex.{h,cpp,inl}:
          Changed removed_ to a bool and removed ACE_USES_OBSOLETE_GUARD_CLASSES
          support.

Thu Jul 27 07:37:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/tao.doxygen:
        * etc/tao_portableserver.doxygen:
          Set ignore prefix

        * Kokyu/Dispatcher_Task.i
        * Kokyu/Dispatcher_Task.inl
          Renamed .i to .inl so that we can have a look how subversion stores
          this in the history

        * Kokyu/Dispatcher_Task.cpp
        * Kokyu/Dispatcher_Task.h
        * Kokyu/Makefile.am
          Updated for the change above.

Wed Jul 26 07:25:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/sets-manager.py:
          Fixed typo

Wed Jul 26 07:25:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
        * html/Stats/index.shtml:
        * docs/ACE-bug-process.html:
          Updated documentation to point to the new svn repository

Tue Jul 25 21:51:07 UTC 2006  William R. Otte  <wotte@dre.vanderbilt.edu>

        * bin/PythonACE/fuzz/max_project_len.py
        * bin/PythonACE/fuzz/inline.py

          Fixed errors in these checks.

Tue Jul 25 20:52:51 UTC 2006  William R. Otte  <wotte@dre.vanderbilt.edu>

        * bin/PythonACE/fuzz/cpp_inline.py

          Fixed this check, it was incorrectly matching ACE_INLINES inside
          defines and comments.

Tue Jul 25 20:16:26 UTC 2006  William R. Otte  <wotte@dre.vanderbilt.edu>
